[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/swapperStatue.gd" type="Script" id=1]
[ext_resource path="res://scenes/assets/AvatarSwapperSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/instance/switches/singingSwitchParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/instance/DialogChoiceList.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/instance/dialog/full_scale.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 371.849, 92.7326 )

[node name="swapperStatue" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="DialogChoiceList" parent="." instance=ExtResource( 4 )]
visible = false

[node name="full_scale" parent="DialogChoiceList" instance=ExtResource( 5 )]
position = Vector2( -190.273, -109.407 )
scale = Vector2( 3, 3 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.694717, 23.6507 )
shape = SubResource( 1 )

[node name="singingSwitchParticles" parent="." instance=ExtResource( 3 )]
position = Vector2( 1.42644, 0.456039 )

[node name="AvatarSwapper" parent="." instance=ExtResource( 2 )]
[connection signal="body_entered" from="." to="." method="_on_ChangeStatue_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ChangeStatue_body_exited"]
[connection signal="tree_entered" from="." to="." method="_on_swapperStatue_tree_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_swapperStatue_tree_exiting"]
[connection signal="completed_dialog" from="DialogChoiceList" to="." method="_on_DialogChoiceList_completed_dialog"]
